--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
   },
   "dependencies": {
     "@getflywheel/local-components": "^16.0.0",
+    "@types/extract-zip": "^2.0.0",
+    "extract-zip": "^2.0.1",
     "fs-extra": "^11.2.0",
     "npm": "^11.6.3",
     "simple-git": "^3.21.0",
