feat: add public API for programmatic access
- Create NodeOrchestratorAPI class with full CRUD operations
- Support for both Node app and WordPress plugin management
- Comprehensive JSDoc documentation on all public methods
- Export typed API via package.json exports field
- Add API.md with usage examples and best practices
- Enable "hardcoded" addon use case with preset configurations

Public API allows other Local addons to:
- Add/start/stop/remove Node apps programmatically
- Install plugins from multiple sources (git/zip/wporg/bundled)
- Monitor progress with callback functions
- Access all managed resources

Example usage:
```typescript
import { NodeOrchestratorAPI } from '@local/node-orchestrator/api';
const api = new NodeOrchestratorAPI(site);
await api.addNodeApp({
  name: 'my-api',
  gitUrl: 'https://github.com/org/repo.git',
  autoStart: true
});
```

--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
   "description": "Manage Node.js applications alongside WordPress sites in Local",
   "main": "lib/main-full.js",
   "renderer": "lib/renderer.js",
+  "exports": {
+    ".": "./lib/main-full.js",
+    "./api": "./lib/api/index.js"
+  },
+  "types": "lib/api/index.d.ts",
   "scripts": {
     "build": "npm run clean && npm run compile",
     "build:minimal": "npm run clean && npm run compile",
